--- a/websocket-client.html
+++ b/websocket-client.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <script>
-var ws = new WebSocket('wss://arnoudb3win.wri.wolfram.com:7777', 'echo-protocol');
+var ws = new WebSocket('wss://18.217.160.48:443', 'echo-protocol');
 function sendMessage() {
  var message = document.getElementById('message').value;
  ws.send(message);
